--- a/index.html
+++ b/index.html
@@ -144,26 +144,26 @@ function myScript() {
 
                 <div class="about__data">
                     <p class="about__description">
-                        I am a Third-year undergraduate at Sri Lanka Institute of Information Technology (SLIIT).
-                        Pursuing BSc. (Hons) in Information Technology Specializing in Information Technology.
-                        Fluent In MERN Stack and Java.           
+                        I am a fourth-year undergraduate at Sri Lanka Institute of Information Technology
+                         (SLIIT), pursuing a BSc. (Hons) in Information Technology specializing in
+                          Information Technology.         
                     </p>
 
                     <div class="about__info">
                         <div >
-                            <span class="about__info-title">03+</span>
+                            <span class="about__info-title">10+</span>
                             <span class="about__info-name">Undergraduate <br> project </span>
                             <span class="about__info-name">experience </span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">50+</span>
                             <span class="about__info-name">Problem <br> solving </span>
                             <span class="about__info-name">experience </span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">04+</span>
+                            <span class="about__info-title">10+</span>
                             <span class="about__info-name">Completed <br> projects </span>
                         </div>
                     </div>
